test_regress/t/t_strength_highz.out
%Error-UNSUPPORTED: t/t_strength_highz.v:8:17: Unsupported: highz strength
    8 |    wire (weak0, highz1) a = 1;
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
